@@ -1,5 +1,10 @@
 2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* lily/break-substitution.cc (fast_fubstitute_grob_list): use
+	realloc()
+
+	* lily/dynamic-engraver.cc (process_music): don't use SCM_UNDEFINED
+
 	* Documentation/user/tutorial.itely: fixes by Graham Percival.
 
 2002-08-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
